--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
     width: 700px;
     display: flex;
     justify-content: space-between;
+    margin-top: 30px;
 }
 .answerPoints-item {
     background-color: #fff;
